Skip to content

macosx: crash when quitting the Qt interface

-------------------------------------
Translated Report (Full Report Below)
-------------------------------------

Process:               vlc-osx-static [33019]
Path:                  /Users/USER/*/vlc-osx-static
Identifier:            vlc-osx-static
Version:               ???
Code Type:             X86-64 (Native)
Parent Process:        zsh [35475]
Responsible:           iTerm2 [35315]
User ID:               501

Date/Time:             2022-06-28 16:57:37.7989 +0200
OS Version:            macOS 12.3 (21E230)
Report Version:        12
Bridge OS Version:     6.4 (19P4242)


Time Awake Since Boot: 110000 seconds

System Integrity Protection: enabled

Crashed Thread:        0  vlc-qt  Dispatch queue: com.apple.main-thread

Exception Type:        EXC_CRASH (SIGABRT)
Exception Codes:       0x0000000000000000, 0x0000000000000000
Exception Note:        EXC_CORPSE_NOTIFY

Application Specific Information:
dyld4 config: DYLD_LIBRARY_PATH=:/usr/local/Cellar/openssl@1.1/1.1.1k/lib/
Assertion failed: (vlc_list_is_empty( &p_ml->cbs )), function libvlc_MlRelease, file medialibrary.c, line 124.


Thread 0 Crashed:: vlc-qt Dispatch queue: com.apple.main-thread
0   libsystem_kernel.dylib        	    0x7ff81906c00e __pthread_kill + 10
1   libsystem_pthread.dylib       	    0x7ff8190a21ff pthread_kill + 263
2   libsystem_c.dylib             	    0x7ff818fedd24 abort + 123
3   libsystem_c.dylib             	    0x7ff818fed0cb __assert_rtn + 314
4   libvlccore.9.dylib            	       0x109c08f7b libvlc_MlRelease + 155 (medialibrary.c:124)
5   libvlccore.9.dylib            	       0x109b1ab1b libvlc_InternalCleanup + 491 (libvlc.c:386)
6   libvlc.12.dylib               	       0x10991a3ee libvlc_release + 62 (core.c:85)
7   vlc-osx-static                	       0x1097da6f7 main + 1591 (darwinvlc.m:303)
8   dyld                          	       0x10cc0651e start + 462
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information